docs: 更新 Java 文档